--- a/aionbook_theme/css/common.css
+++ b/aionbook_theme/css/common.css
@@ -351,13 +351,16 @@
    
    /* Mobile Footer Navigation */
    .mobile-footer__section-title {
-     font-family: 'Pretendard';
-     font-size: 18px;
-     font-weight: 700;
-     line-height: 37px;
-     letter-spacing: -0.03em;
-     text-align: left;
-     margin-bottom: 12px;
+
+    width: 100px;
+    font-family: 'NanumEB';
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 37px;
+    letter-spacing: -0.03em;
+    text-align: left;
+    margin-bottom: 8px;
+    color: #4C4F5F;
    }
    
    .mobile-footer__nav-list {
@@ -368,7 +371,7 @@
    
    .mobile-footer__nav-item {
      font-family: 'Pretendard';
-     font-size: 16px;
+     font-size: 14px;
      font-weight: 500;
      line-height: 37px;
      letter-spacing: -0.03em;
@@ -507,7 +510,14 @@
    @media (max-width: 480px) {
      /* Updated mobile footer width for smallest screens */
      .mobile-footer__inner {
-       width: 247px;
-       height: 95px;
+       width: 100%;
+       /* height: 95px; */
      }
+     .mobile-footer {
+      display: block;
+    }
+  
+    .desktop-footer {
+      display: none;
+    }
    }
