--- a/aionbook_theme/css/pricetable.css
+++ b/aionbook_theme/css/pricetable.css
@@ -6,7 +6,7 @@
   }
   
   .pricetable {
-    padding: 30px 0;
+    padding: 130px 30px;
   }
   
   .pricetable_inner {
@@ -53,7 +53,6 @@
     color:#FFFFFF;
     border-radius: 14px;
     box-shadow: 0px 4px 32.5px -7px #A3A3A340;
-
   }
   
   .table_column .title {
@@ -63,46 +62,78 @@
     border-bottom: 1px solid #FFFFFF;
   }
   
-  .table_column .cell {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* padding: 30px 20px; */
-    text-align: center;
-    border-bottom: 1px solid #CDCDCD;
-    font-family: 'Pretendard';
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 48px;
-    letter-spacing: -0.03em;
-  }
-  
-  .table_column .cell span {
-    font-size: 14px;
-    color: #FFFFFF;
-    margin-bottom: 5px;
-    line-height: 48px;
-    letter-spacing: -0.03em;
- }
-  
   .header .cell {
     font-family: 'Pretendard';
     font-size: 24px;
     font-weight: 700;
-    line-height: 48px;
-    letter-spacing: -0.03em;
-    
+    /* line-height: 48px; */
+    letter-spacing: -0.03em;  
+    height: 124px; /* height 고정 */  
+    margin-top: 5px;
   }
+
+  .header .cell03 {
+    font-family: 'Pretendard';
+    font-size: 24px;
+    font-weight: 700;
+    /* line-height: 48px; */
+    letter-spacing: -0.03em;  
+    height: 124px; /* height 고정 */  
+    margin-top: 5px;
+  }
+  .header .cell04 {
+    font-family: 'Pretendard';
+    font-size: 24px;
+    font-weight: 700;
+    /* line-height: 48px; */
+    letter-spacing: -0.03em;  
+    height: 124px; /* height 고정 */  
+    margin-top: 5px;
+  }
+  .table_column .cell03 span {
+    font-size: 16px;
+    font-weight: 500;
+    color: #FFFFFF;
+    margin-top: 8px;
+    letter-spacing: -0.03em;
+ }
+ .table_column .cell04 span {
+  font-size: 16px;
+  font-weight: 500;
+  color: #FFFFFF;
+  margin-top: 6px;
+  letter-spacing: -0.03em;
+}
+
+ .table_column .cell {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* padding: 30px 20px; */
+  text-align: center;
+  border-bottom: 1px solid #CDCDCD;
+  font-family: 'Pretendard';
+  font-size: 24px;
+  font-weight: 700;
+  /* line-height: 48px; */
+  letter-spacing: -0.03em;
+  height: 124px; /* height 고정 */
+}
   
   .pricetable_text {
     font-family: 'Pretendard';
     text-align: center;
-    color: #6B7280;
+    color:#777777;
     font-size: 14px;
     line-height: 1.6;
   }
+
+  /* bold체 강제 랜더링 */
+.pricetable_text strong {
+  font-weight: bold; /* strong 태그에 굵기 적용 */
+}
   
   /* 태블릿 (최대 1200px) */
   @media screen and (max-width: 1200px) {
