--- a/aionbook_theme/css/inquiry.css
+++ b/aionbook_theme/css/inquiry.css
@@ -236,6 +236,9 @@
       margin-top: 20px;
   }
 
+  .inquiry__input_lg label {
+    width: 100px;}
+
   .inquiry__btn {
     max-width: 100%;
       font-size: 16px;
@@ -268,6 +271,13 @@
       font-size: 14px;
       line-height: 20px;
   }
+  .inquiry__input label {
+    font-size: 16px;
+    max-width: 100%;
+    margin-top: 20px;
+}
+  .inquiry__input_lg label {
+    max-width: 100%;}
 
   .inquiry__btn {
     max-width: 100%;
