--- a/aionbook_theme/css/inquiry.css
+++ b/aionbook_theme/css/inquiry.css
@@ -61,6 +61,8 @@
   }
   
   .inquiry__input {
+    flex: 1;
+    position: relative;
     width: 588px;
     display: flex;
     flex-direction: column;
@@ -74,7 +76,8 @@
     font-family: 'Pretendard';
     letter-spacing: -0.03em;
     width: 151px; /* 라벨 너비 설정 */
-    height: 63px;
+    height: 100%;
+    /* height: 63px; */
     position: absolute;
     font-size: 20px;
     text-align: center;
