--- a/aionbook_theme/css/inquiry.css
+++ b/aionbook_theme/css/inquiry.css
@@ -57,7 +57,7 @@
     display: flex;
     /* justify-content: space-between; */
     gap: 14px;
-    margin-bottom: 14px;
+    /* margin-bottom: 14px; */
   }
   
   .inquiry__input {
@@ -256,51 +256,44 @@
 /* 모바일 미디어 쿼리 (max-width 375px) */
 @media screen and (max-width: 375px) {
   .inquiry__inner {
-    padding: 0;
-  }
-
-  .inquiry__type {
-    font-size: 20px;
-  }
-
-  .inquiry__description {
-    font-size: 22px;
-    line-height: 32px;
-  }
-
-  .inquiry__sub-description {
-    font-size: 14px;
-    line-height: 20px;
-  }
-
-  .inquiry__input label {
-    width: 100px;
-    font-size: 14px;
+    padding: 30px 16px;
   }
 
   .inquiry__input input {
-    max-width: 100%;
-    height: 48px;
-    padding-left: 110px;
-    font-size: 14px;
-  }
-
-  .inquiry__input input::placeholder {
-    font-size: 14px;
-  }
-
-  .inquiry__content {
-    font-size: 14px;
-    margin-left: 15px;
+    height: 42px;
+    height: 42px;
   }
 
   .inquiry__input_lg textarea {
-    height: 120px;
+    height: 42px;
+    height: 113px;
+  }
+
+  .inquiry__row {
+    gap: 8px;
+  }
+
+  .inquiry__input label,
+  .inquiry__input_lg label,
+  .inquiry__content {
+    height: 42px;
     font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: -0.03em;
+    text-align: center;
+  }
+
+  .inquiry__input label {
+    height: 42px;
+  }
+
+  .inquiry__content {
+    margin-left: 15px;
   }
 
   .inquiry__btn {
-    height: 40px;
+    height: 42px;
     font-size: 14px;
     margin-top: 30px;
   }
