--- a/aionbook_theme/css/inquiry.css
+++ b/aionbook_theme/css/inquiry.css
@@ -43,13 +43,12 @@
 .inquiry__sub-description {
   font-family: 'Pretendard';
   display: inline-block;
-  margin-top: 22px;
   font-size: 20px;
   line-height: 30px;
   font-weight: 500;
   color: #151515;
-  margin-bottom: 34px;
-
+  margin-bottom: 12px;
+  margin-top: 12px;
 }
 
 .inquiry__form {
@@ -63,7 +62,7 @@
 }
 
 .inquiry__input {
-  width: 588px;
+  width: 593px;
   display: flex;
   flex-direction: column;
   font-weight: 600;
@@ -115,7 +114,7 @@
 }
 .inquiry__input_lg label {
   font-family: 'Pretendard';
-  width: 1200px; /* 라벨 너비 설정 */
+  width: 1200px; /* 문의내용 라벨 너비 설정 */
   position: absolute;
   top: 15px;
   font-size: 20px;
@@ -221,32 +220,42 @@
     max-width: 720px;
   }
   .inquiry__input input{
-    width: 712px;
+    width: 720px;
     height: 64px;
     justify-content: center;
 }
 .inquiry__input_lg textarea {
-  max-width: 712px;
+  max-width: 720px;
   height: 160px;
 }
-
-
 .inquiry__description {
     font-size: 26px;
     line-height: 40px;
 }
-
 .inquiry__sub-description {
     font-size: 16px;
     line-height: 24px;
 }
-
 .inquiry__input label {
-    font-size: 16px;
-    width: 100px;
-    margin-top: 20px;
+    width: 151px;
+    margin-top: 14PX;
+    font-family: 'Pretendard';
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: -0.03em;  
+    padding-top: 22px;
 }
-
+.inquiry__content{
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: -0.03em;
+}
+.inquiry__input input::placeholder {
+  padding-left: 24px;
+  font-size: 18px;
+}
 .inquiry__btn {
   max-width: 100%;
     font-size: 16px;
@@ -254,35 +263,75 @@
 }
 }
 /* 모바일 미디어 쿼리 (max-width 375px) */
-@media screen and (max-width: 375px) {
-.inquiry__input input,
-.inquiry__input_lg textarea {
+@media screen and (max-width: 376px) {
+  .inquiry__inner {
+    padding: 30px 0;
+    max-width: 327px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+  }
+  .inquiry__form {
+    max-width: 327px;
+  }
+  .inquiry__input input{
     width: 327px;
     height: 42px;
+    justify-content: center;
 }
-
-.inquiry__inner {
-    padding: 30px 16px;
-    max-width: 100%;
+.inquiry__text {
+  width: 100%;
+  align-items: left;
 }
-
 .inquiry__type {
-    font-size: 24px;
+  width: 54px;
+  font-size: 16px;
 }
-
 .inquiry__description {
-    font-size: 22px;
-    line-height: 32px;
+  margin-top: 0;
+  width: 327px;
+  font-size: 20px;
 }
-
 .inquiry__sub-description {
-    font-size: 14px;
-    line-height: 20px;
+  font-size: 14px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+.inquiry__input_lg label {
+
+  width: 100%; /* 문의내용 라벨 너비 설정 */
+  position: absolute;
+  /* top: 15px; */
+}
+.inquiry__input_lg textarea {
+  max-width: 327px;
+  height: 113px;
 }
 
+.inquiry__input label {
+  width: 100px;
+  font-size: 14px;
+  padding-top: 10px;
+}
+.inquiry__input {
+  width: 100%;
+}
+
+.inquiry__content{
+font-size: 14px;
+font-weight: 600;
+line-height: 20px;
+letter-spacing: -0.03em;
+margin-right: 10px;
+}
+.inquiry__input input::placeholder {
+padding-left: 0;
+font-size: 14px;
+}
 .inquiry__btn {
-  max-width: 100%;
-    font-size: 14px;
-    padding: 6px 0;
+max-width: 100%;
+  font-size: 16px;
+  padding: 8px 0;
 }
 }
+
