--- a/aionbook_theme/css/learning.css
+++ b/aionbook_theme/css/learning.css
@@ -151,7 +151,7 @@
 }
 
 /* Mobile (480px and below) */
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 480px) {
     .learning-system__title {
         font-size: 24px;
         line-height: 32px;
@@ -174,44 +174,59 @@
     }
 }
 
-/* Popup styles */
+/* 팝업창 스타일적용 */
+
 .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  backdrop-filter: blur(8px); /* Blur effect */
+  z-index: 99999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .popup-content {
-    position: relative;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 90%;
-    max-width: 800px;
+  position: relative;
+  background-color: white;
+  border-radius: 12px;
+  width: 90%;
+  max-width: 800px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .popup-content video {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
 }
 
+/* Close button */
 .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: transparent;
-    border: none;
-    padding: 12px 20px;
-    font-size: 20px;
-    cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background-color: #323232;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 24px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
+
+/* Close button hover effect */
+.close-btn:hover {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
 
   /*  */
   /* learning course 한 번에 끝내는 AI 학습코스 */
